fixed position ul, and gap

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@ h1.title-green{
 
 .menu ul {
     list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    margin: 15px 10px;
+    gap: 10px;
 }
 
 .menu a {
